--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.password=Anar123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+
+
+app.servers[0].ip = 192.168.1.2
+app.servers[0].location = Azerbaijan
